--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ManejoPresupuesto.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/Custom.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="ManejoPresupuesto.styles.css/" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -25,6 +27,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="TiposCuentas" asp-action="Index">Tipos Cuenta</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-controller="Cuentas" asp-action="Index">Cuentas</a>
                         </li>
                     </ul>
                 </div>
