--- a/ManejoPresupuesto/ManejoPresupuesto/wwwroot/css/Custom.css
+++ b/ManejoPresupuesto/ManejoPresupuesto/wwwroot/css/Custom.css
@@ -2,3 +2,15 @@
 {
     cursor:move
 }
+.container-totales {
+    display: flex;
+    justify-content: space-around;
+    font-size: 26px;
+    text-align: center;
+}
+.activo {
+    color:blue;
+}
+.pasivo{
+    color:red;
+}
