--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Cuentas/Editar.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Cuentas/Editar.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CuentaCreacionViewModel
-
 @{
-    ViewData["Title"] = "Crear Cuenta";
+    ViewData["Title"] = "Editar Cuenta";
 }
 
-<h1>Crear Cuenta</h1>
-
+<h1>Editar Cuenta: @Model.Nombre</h1>
 <form asp-action="Crear">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Id"/>
     <div class="mb-3">
         <label asp-for="Nombre" class="form-label"></label>
         <input asp-for="Nombre" class="form-control"/>
