--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Categorias/Crear.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Categorias/Crear.cshtml
@@ -15,7 +15,14 @@
     </div>
      <div class="mb-3">
         <label asp-for="TipoOperacionId" class="form-label"></label>
-       <select asp-for="TipoOperacionId" asp-items="Html.GetEnumSelectList<TipoOperacionId>()"></select>
-        <span asp-validation-for="Nombre" class="text-danger"></span>
+       <select asp-for="TipoOperacionId" asp-items="Html.GetEnumSelectList<TipoOperacion>()" class="form-select"></select>
+        <span asp-validation-for="TipoOperacionId" class="text-danger"></span>
     </div>
+    <button class="btn btn-primary" type="submit">Enviar</button>
+    <a class="btn btn-secondary" asp-action="Index">Cancelar</a>
 </form>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
