--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Cuentas/Editar.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Cuentas/Editar.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1>Editar Cuenta: @Model.Nombre</h1>
-<form asp-action="Crear">
+<form asp-action="Editar">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id"/>
     <div class="mb-3">
