--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Crear.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Crear.cshtml
@@ -43,7 +43,7 @@
 
 @section Scripts
 {
-    <partial name="_ValidationScriptsPartial"/>
+    @*<partial name="_ValidationScriptsPartial"/>*@
     <script src="~/js/FormularioTransacciones.js" asp-append-version="true"></script>
     <script>
         const urlObtenerCategorias = '@Url.Action("ObtenerCategorias")';
