--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Editar.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Editar.cshtml
@@ -1,6 +1,7 @@
 ﻿@model TransaccionesActualizacionViewModel
 @{
     ViewData["Title"] = "Creacion de Transaccion";
+    var linkCancelar = Model.UrlRetorno ?? Url.Action("Index");
 }
 
 <h1>Crear Transaccion</h1>
@@ -8,6 +9,7 @@
 <form asp-action="Editar">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id"/>
+    <input type="hidden" asp-for="UrlRetorno"/>
     <input type="hidden" asp-for="MontoAnterior"/>
     <input type="hidden" asp-for="CuentaAnteriorId"/>
 
@@ -44,7 +46,7 @@
     <button class="btn btn-primary" asp-action="Editar">Actualizar</button>
     <button class="btn btn-danger" asp-action="Borrar">Borrar</button>
 
-    <a class="btn btn-secondary" asp-action="Index">Cancelar</a>
+    <a class="btn btn-secondary" href="linkCancelar">Cancelar</a>
 </form>
 
 @section Scripts
