--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Index.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Index.cshtml
@@ -1,6 +1,12 @@
-﻿
-
+﻿@model ReporteTransaccionesDetalladas
 @{
-    ViewData["Title"] = "Transacciones";
+    ViewData["Title"] = "Reporte Diario";
 }
-<h1>Transacciones</h1>
+
+<partial name="_Submenu" model="SubMenuTransacciones.Diario"/>
+
+<div class="mb-3">
+    <a asp-action="Crear" class="btn btn-primary">Crear una nueva transaccion</a>
+</div>
+
+<partial name="_ReporteTransaccionesDetalladas" model="Model"/>
