--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Mensual.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Mensual.cshtml
@@ -1,7 +1,53 @@
-﻿
+﻿@model ReporteMensualViewModel
+
 @{
     ViewData["Title"] = "Reporte Mensual";
-
+    int anioAnterior = Model.Anio - 1;
+    int anioPosterior = Model.Anio +1;
+    var resumenMontos = new ResumenMontoViewModel()
+            {
+                Gastos = Model.Gastos,
+                Ingresos = Model.Ingresos,
+                Total = Model.Total
+            };
 }
 
 <partial name="_Submenu" model="SubMenuTransacciones.Mensual"/>
+
+<h4>
+    Mostrando Transacciones de
+    <a asp-route-anio="@anioAnterior" class="btn btn-secondary"><i class="bi-chevron-left"></i></a>@Model.Anio
+    <a asp-route-anio="@anioPosterior" class="btn btn-secondary"><i class="bi-chevron-right"></i></a>
+</h4>
+
+<partial name="_ResumenMonto" model="@resumenMontos"/>
+
+<table class="table" style="font-size: 20px">
+
+    <thead>
+        <tr style="background-color: lightblue">
+            <th>Mes</th>
+            <th style="text-align: right">Ingresos</th>
+            <th style="text-align: right">Gastos</th>
+
+        </tr>
+
+    </thead>
+    <tbody>
+        @foreach(var transacciones in Model.TransaccionesPorMes)
+        {
+            <tr>
+                <td>
+                    <a style="text-decoration: none;" asp-action="Index" asp-route-anio="@Model.Anio" asp-route-mes="@transacciones.Mes">
+                        @transacciones.FechaReferencia.ToString("MMM")
+                    </a>
+                </td>
+                <td class="activo" style="text-align: right">@transacciones.Ingreso</td>
+                <td class="pasivo" style="text-align: right">@transacciones.Gasto</td>
+  
+
+            </tr>
+
+        }
+    </tbody>
+</table>
