--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/Custom.css" asp-append-version="true"/>
     <link rel="stylesheet" href="ManejoPresupuesto.styles.css/" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="~/lib/fullcalendar/main.min.css" />
 </head>
 <body>
     <header>
