--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/ExcelReporte.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/ExcelReporte.cshtml
@@ -1,7 +1,44 @@
 ﻿
 @{
     ViewData["Title"] = "Reporte Excel";
-
+    var hoy = DateTime.Today;
+    var haceUnMes = hoy.AddMonths(-1);
+    var mesActual = hoy.Month;
+    var anioActual = hoy.Year;
+    var mesAnterior = haceUnMes.Month;
+    var mesAnioAnterior = haceUnMes.Year;
+    var anioAnterior = anioActual - 1;
 }
 
 <partial name="_Submenu" model="SubMenuTransacciones.Excel"/>
+<h1>Exportar Transacciones a Excel
+</h1>
+
+<div class="mb-3">
+    <a asp-action="ExportarExcelPorMes" asp-route-mes="@mesActual" asp-route-anio="@anioActual" class="btn btn-success">
+        Exportar mes Actual
+    </a> ~ @hoy.ToString("MMM yyyy")
+</div>
+
+<div class="mb-3">
+    <a asp-action="ExportarExcelPorMes" asp-route-mes="@mesAnterior" asp-route-anio="@mesAnioAnterior" class="btn btn-success">
+        Exportar mes anterior
+    </a> ~ @haceUnMes.ToString("MMM yyyy")
+</div>
+
+<div class="mb-3">
+    <a asp-action="ExportarExcelPorAnio" asp-route-anio="@anioActual" class="btn btn-success">
+        Exportar Año Actual
+    </a> ~ @anioActual
+</div>
+
+<div class="mb-3">
+    <a asp-action="ExportarExcelPorAnio"  asp-route-anio="@anioAnterior" class="btn btn-success">
+        Exportar año anterior
+    </a> ~ @anioAnterior
+</div>
+<div class="mb-3">
+    <a asp-action="ExportarExcelTodo"  class="btn btn-success">
+        Exportar Todo
+    </a> 
+</div>
