--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Semanal.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Transacciones/Semanal.cshtml
@@ -1,8 +1,48 @@
-﻿
+﻿@model ReporteSemanalViewModel
 
 @{
     ViewData["Title"] = "Reporte Semanal";
 
+    string FormatearFecha(DateTime fecha)
+    {
+        return fecha.ToString("MM.dd");
+
+    }
+    var resumenMontos = new ResumenMontoViewModel()
+    {
+        Ingresos = Model.Gastos,
+        Gastos = Model.Ingresos,
+        Total = Model.Total
+
+    };
 }
 
 <partial name="_Submenu" model="SubMenuTransacciones.Semanal"/>
+<partial name="_NavegarPorMeses" model="@Model.FechaReferencia" />
+
+<partial name="_ResumenMonto" model="@resumenMontos" />
+
+<table class="table" style="font-size: 20px;">
+    <thead>
+        <tr>
+            <th>Semanal</th>
+            <th style="text-align: right">Ingresos</th>
+            <th style="Text-align: right">Gastos</th>
+        </tr>
+    </thead>
+    @foreach(var transaccionesPorSemana in Model.TransaccionesPorSemana)
+    {
+        <tr>
+            <td>
+                <a style="text-decoration: none" asp-action="Index" asp-route-anio="@Model.FechaReferencia.Year" asp-route-anio="@Model.FechaReferencia.Month">@FormatearFecha(transaccionesPorSemana.FechaInicio) ~ @FormatearFecha(transaccionesPorSemana.FechaIFin)</a>
+                
+            </td>
+            <td class="activo" style="text-align: right">
+                @transaccionesPorSemana.Ingresos
+            </td>
+            <td class="pasivo" style="text-align: right">
+                @transaccionesPorSemana.Gastos
+            </td>
+        </tr>
+    }
+</table>
