--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Shared/_Layout.cshtml
@@ -35,7 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="Categorias" asp-action="Index">Categorias</a>
                         </li>
+
                     </ul>
+                    <partial name="_LinksLogin"/>
                 </div>
             </div>
         </nav>
