--- a/ManejoPresupuesto/ManejoPresupuesto/Views/Categorias/Index.cshtml
+++ b/ManejoPresupuesto/ManejoPresupuesto/Views/Categorias/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@model IEnumerable<Categoria>
+﻿@model PaginacionRespuesta<Categoria>
 @{
     ViewData["Title"] = "Categorias";
 }
 <h1>Categorias</h1>
-<a asp-action="Crear" class="btn btn-primary mb-3">Crear Nuevo</a>
 
+<h2>Cantidad de categorias: @Model.CantidadTotalRecords - Cantidad de paginas: @Model.CantidadTotalDePaginas</h2>
+<a asp-action="Crear" class="btn btn-primary mb-3">Crear Nuevo</a>
+<partial name="_Paginacion"/>
 <table class="table">
     <thead>
         <tr>
@@ -14,7 +16,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Elementos)
         {
             <tr>
                 <td>
